little changes in login, signup files and fixed close button and removed some extra spaces

--- a/view/static/css/login.css
+++ b/view/static/css/login.css
@@ -14,10 +14,9 @@
   .center h1{
     margin-top: 30px;
     text-align: center;
-    padding: 0 0 20px 0;
+    padding: 0 0 20px 60px;
     border-bottom: 1px solid silver;
   }
-
 
 .button-xx{
     float: right;
@@ -28,11 +27,10 @@
     margin-top: 20px;
 }
 
-
 .close{
     height: 50%;
     width: 100%;
-    background-color: rgb(255, 153, 0);
+    background-image: linear-gradient(120deg, #f6d365, #fda087);
     cursor: pointer;
     transition-property: background, border-radius;
     transition: all ease-in-out .4s;
@@ -41,36 +39,30 @@
     padding-top: 5px;
 }
 
-
 .close span{
   font-size: 35px;
 }
-
 
 .close a{
   width: 30px;
   height: 30px;
 }
 
-
 .close:hover{
     background: #f39e00;
     border-radius: 50%;
 }
-
 
   .center form{
     padding: 0 40px;
     box-sizing: border-box;
   }
 
-
   form .txt_field{
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
   }
-
 
   .txt_field input{
     width: 100%;
@@ -81,7 +73,6 @@
     background: none;
     outline: none;
   }
-
 
   .txt_field label{
     position: absolute;
@@ -94,7 +85,6 @@
     transition: .5s;
   }
 
-
   .txt_field span::before{
     content: '';
     position: absolute;
@@ -105,20 +95,17 @@
     background: #2691d9;
   }
 
-
   .txt_field input:focus ~label,
   .txt_field input:valid ~label{
     top: -5px;
     color: #2691d9;
   }
 
-
   .pass{
     margin: -5px 0 20px 5px;
     color: #a6a6a6;
     cursor: pointer;
   }
-
 
   input[type="submit"]{
     width: 100%;
@@ -134,14 +121,12 @@
     font-family:  'Staatliches', cursive;
   }
 
-
   input[type="submit"]:hover{
     transition: .5s;
     background-image: linear-gradient(120deg, #f6d365, #fda087);
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.1);
     border: none;
   }
-
 
   .signup-link{
     margin: 30px 0;
@@ -150,11 +135,9 @@
     color: #a6a6a6;
   }
 
-
   .signup-link a{
     color: #2691d9;
   }
-
 
   .signup-link a:hover{
     background-image: linear-gradient(120deg, #f6d365, #fda087);
@@ -163,14 +146,12 @@
     border-radius: 5px;
   }
 
-
   .center p{
     font-size: 16px;
     text-align: center;
     color: #a6a6a6;
     text-decoration: none;
   }
-
 
   .home-link{
       margin: 30px 0;
@@ -179,11 +160,9 @@
     color: #a6a6a6;
   }
 
-
   .home-link a{
     color: #2691d9;
   }
-
 
   .home-link a:hover{
     background-image: linear-gradient(120deg, #f6d365, #fda087);
